--- a/03-react-auth/package.json
+++ b/03-react-auth/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "neostandard": "^0.12.1",
+    "sass": "^1.87.0",
     "vite": "^6.3.5"
   }
 }
